# syssec_final

./: .gitignore  Dockerfile  Makefile  README.md  findings.md  progress.md  pyproject.toml  requirements-benchmark.txt  task_plan.md
.github/workflows/: pages.yml
datasets/external_apk_corpus_v1/: README.md  manifest.json
datasets/hardeninspector_eval_v1/: README.md  labels.json
datasets/hardeninspector_eval_v1/apks/: adb_developer_settings_probe.apk  bangcle_stub_payload.apk  class_forname_reflection.apk  combined_hardened_showcase.apk  (+18 more)
docs/: architecture.md  benchmark.md  completion_audit.md  dataset.md  defense_qa.md  demo.md  demo_web.md  environment.md  external_corpus.md  final_deliverable.md  implementation_scope.md  index.html  live_demo_script.md  rules.md  usage.md
docs/demo/: index.html  runtime_probe.js  runtime_trace_example.json
examples/: make_demo_apk.py
reports/: final_summary.md
reports/benchmark/: benchmark_metrics.csv  benchmark_results.json  benchmark_summary.md
reports/external_corpus/: external_corpus_counts.csv  external_corpus_results.json  external_corpus_summary.md
scripts/: setup_env.sh
slides/: README.md  final_presentation.tex
src/hardeninspector/: __init__.py  apk.py  axml.py  benchmark.py  cli.py  dataset.py  demo_web.py  dex.py  features.py  native.py  report.py  rules.py  synthetic.py  util.py
tests/: __init__.py  fixtures.py  test_apk_axml.py  test_benchmark.py  test_cli.py  test_dataset.py  test_demo_web.py  test_detector.py  test_dex.py  test_final_artifacts.py  test_native.py  test_project_environment.py
(+25 files in other folders)
